src/main/java/com/example/faceToInterface/good/Move.java
package com.example.faceToInterface.good;

/**
 * @author: xiongchaohua
 * @Des :
 * @create: 2021-07-15 18:20
 **/
public interface Move {
    void work();
}
