src/main/java/com/example/faceToInterface/bad/Car.java
package com.example.faceToInterface.bad;

/**
 * @author: xiongchaohua
 * @Des :
 * @create: 2021-07-15 18:16
 **/
public class Car {
    public void move() {
        System.out.println("move by car");
    }
}
